--- a/quality/templates/quality/query_data.html
+++ b/quality/templates/quality/query_data.html
@@ -22,20 +22,30 @@
    <div  class="container my-auto">
 
       <h3 class="custom_title pb-3"> Choisissez le produit pour lequel vous voulez un substituant : </h3>
-      <div class="row">
-         {% for dict_item in data %}
+
+   <div class="row">
+  <div class="col-lg-8 mx-auto text-center">
+  <hr class="my-4">
+  <p class="mb-5"> Ces choix proviennent de notre base de données</p>
+  </div>
+  </div>
+
+
+
+       <div class="row">
+         {% for dict_item in data_quality %}
          <div class="col-xl-4 px-xl-5 col-lg-4 col-md-5 col-sm-6 col-xs-10 mx-auto text-center">
             <form action="{% url 'quality:sub_product' %}" method="GET">
                <div class="item">
 
-                  <span class="notify-badge good-product" >{{dict_item.nutriscore}}</span>
-                  <img class="product_img img-fluid rounded"  src="{{dict_item.img}}" alt="{{dict_item.product_name}}" >
+                  <span class="notify-badge good-product" >{{dict_item.n_grade}}</span>
+                  <img class="product_img img-fluid rounded"  src="{{dict_item.img}}" alt="{{dict_item.name}}" >
 
                </div>
                <div class="carousel-caption mb-5 ">
-                  <h5 class="custom-color ">{{dict_item.product_name}}</h5>
+                  <h5 class="custom-color ">{{dict_item.name}}</h5>
                </div>
-               <button type="submit" class="btn btn-outline-light text-icone mt-3 "name="subscribe" value="{{dict_item.product_name}}, {{dict_item.category}}, {{dict_item.img}}, {{dict_item.nutriscore}}, {{dict_item.url}}">
+               <button type="submit" class="btn btn-outline-light text-icone mt-3 "name="subscribe" value="{{dict_item.name}}, {{dict_item.category}}, {{dict_item.img}}, {{dict_item.n_grade}}, {{dict_item.url}}">
                <i class="fas fa-utensils fa-2x text-icone sr-save-1 "></i>
                Selectionner
                </button>
@@ -43,6 +53,43 @@
          </div>
          {% endfor %}
       </div>
+
+
+       {%  if data_off %}
+       <div class="row">
+  <div class="col-lg-8 mx-auto text-center">
+  <hr class="my-4">
+  <p class="mb-5"> Ces choix proviennent de Open Food Facts</p>
+  </div>
+  </div>
+   {% endif %}
+
+
+          <div class="row">
+         {% for dict_item in data_off %}
+         <div class="col-xl-4 px-xl-5 col-lg-4 col-md-5 col-sm-6 col-xs-10 mx-auto text-center">
+            <form action="{% url 'quality:sub_product' %}" method="GET">
+               <div class="item">
+
+                  <span class="notify-badge good-product" >{{dict_item.n_grade}}</span>
+                  <img class="product_img img-fluid rounded"  src="{{dict_item.img}}" alt="{{dict_item.name}}" >
+
+               </div>
+               <div class="carousel-caption mb-5 ">
+                  <h5 class="custom-color ">{{dict_item.name}}</h5>
+               </div>
+               <button type="submit" class="btn btn-outline-light text-icone mt-3 "name="subscribe" value="{{dict_item.name}}, {{dict_item.category}}, {{dict_item.img}}, {{dict_item.n_grade}}, {{dict_item.url}}">
+               <i class="fas fa-utensils fa-2x text-icone sr-save-1 "></i>
+               Selectionner
+               </button>
+            </form>
+         </div>
+         {% endfor %}
+      </div>
+
+
+
+
    </div>
 </section>
 
